# app/controllers/v1/current_users_controller.rb
@@ -1,0 +1,9 @@
+class V1::CurrentUsersController < V1::SecureController
+  def show
+    render json: {
+      user_id:   current_user.id.to_s,
+      full_name: current_user.full_name,
+      email:     current_user.email
+    }
+  end
+end
